# price-scraping-py

./: .gitignore  LICENSE  README.md  price-scraping-py.toml  pyproject.toml
src/: examplescraper.py  main.py
src/classes/: __init__.py  amazon.py  product.py  scraper.py  unieuro.py  zalando.py
src/constants/: constant.py
src/functions/: notification.py  utility.py
